test/types/records/split-init/error-never-initialized-values-not-mentioned3.chpl
class C { }

proc error() {
  // These are just never mentioned again
  var c1: C;
}
error();
